--- a/oiosaml.net/trunk/src/dk.nita.saml20/dk.nita.saml20/dk.nita.saml20.csproj
+++ b/oiosaml.net/trunk/src/dk.nita.saml20/dk.nita.saml20/dk.nita.saml20.csproj
@@ -304,15 +304,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Tracing.resx</DependentUpon>
     </Compile>
-    <Compile Include="Session\AbstractSessions.cs" />
-    <Compile Include="Session\InProc\InProcSessions.cs" />
-    <Compile Include="Session\InProc\InProcSession.cs" />
-    <Compile Include="Session\ISession.cs" />
-    <Compile Include="Session\ISessions.cs" />
+    <Compile Include="Session\InProcSessionStoreProvider.cs" />
+    <Compile Include="Session\ISessionStoreProvider.cs" />
     <Compile Include="Session\Saml20AssertionLite.cs" />
     <Compile Include="Session\SessionConstants.cs" />
-    <Compile Include="Session\SessionFactory.cs" />
-    <Compile Include="Session\SessionStateUtil.cs" />
+    <Compile Include="Session\SessionStore.cs" />
+    <Compile Include="Session\UserSession.cs" />
     <Compile Include="Specification\DefaultCertificateSpecification.cs" />
     <Compile Include="Specification\ICertificateSpecification.cs" />
     <Compile Include="Specification\SelfIssuedCertificateSpecification.cs" />
