Added sessionstore for SqlServer that works OOTB complete with a script for creating database tables. Includes a builtin job that removes expires sessions - can be disabled and run via SQL jobs if user wants to.
Fixed missing session refreshing in InProcSessionStoreProvider

--- a/dk.nita.saml20.csproj
+++ b/dk.nita.saml20.csproj
@@ -306,9 +306,11 @@
     </Compile>
     <Compile Include="Session\InProcSessionStoreProvider.cs" />
     <Compile Include="Session\ISessionStoreProvider.cs" />
+    <Compile Include="Session\IValueFactory.cs" />
     <Compile Include="Session\Saml20AssertionLite.cs" />
     <Compile Include="Session\SessionConstants.cs" />
     <Compile Include="Session\SessionStore.cs" />
+    <Compile Include="Session\SessionValueFactory.cs" />
     <Compile Include="Session\UserSession.cs" />
     <Compile Include="Specification\DefaultCertificateSpecification.cs" />
     <Compile Include="Specification\ICertificateSpecification.cs" />
